@@ -13,6 +13,8 @@ Change log 1.3 (under development)
 * Fixed a bug so that when Whitebox looks for a var args method it now also checks that the component type of the var args array is the same as the supplied argument type(s).
 * Implemented so that expectPrivate in the EasyMock extension API can be used without specifying a method name. The method is looked up by using the argument types.
 * Extended the Whitebox.setInternalState functionality to accept a var-args list of values to set on an object. I.e. you can now do Whitebox.setInternalState(object, myState1, .., myStateN).
+* Upgraded to Javassist 3.10 (3.11 doesn't work with PowerMock due to a bug).
+* Fixed a bug in the EasyMock extension API regarding suppression of methods so that it now uses Whitebox.getMethods(..) instead of Whitebox.getMethod(..).
 
 Change log 1.2.5 (released 2009-05-05)
 --------------------------------------
